--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h1><a href="index.html"><a href="index.html" class="mr-auto"><img src="assets/img/N.png" height="50px" width="50px" alt="" class="img-fluid"> </a>Nitin</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <div class="wrapped">
-      <h2>I'm a <span>Web Developer</span> </h2>
+      <h2>I'm a <span class="rotate"><i class="val"></i></span></h2>
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
