--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <header id="header" class="header-tops">
     <div class="container">
 
-      <h1><a href="index.html"><a href="index.html" class="mr-auto"><img src="assets/img/N.png" height="50px" width="50px" alt="" class="img-fluid"> </a>Nitin</a></h1>
+      <h1><a href="http://nitindhemiwal.me" class="mr-auto" ><img src="assets/img/N.png" height="50px" width="50px" alt="" class="img-fluid">Nitin</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <div class="wrapped">
       <h2>Building the Universe. One Pixel at a time.</h2>
