--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <!-- Uncomment below if you prefer to use an image logo -->
       <div class="wrapped">
       <h2>Building the Universe. One Pixel at a time.</h2>
-      <h2>I'm a <span class="rotate"><i class="val"></i></span></h2>
+      <h2>Hi, I'm a <span class="rotate"><i class="val"></i></span></h2>
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -432,13 +432,11 @@
         </div>
 
         <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
-          <div class="info-box">
+          <div class="info-box" style="overflow-x: scroll;">
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-       
               <a href="https://twitter.com/Dhemiwalnitin" target="_blank" class="fa fa-twitter"></a>
-              <a href="https://steamcommunity.com/id/dhemiwalnitin/" target="_blank" class="fa fa-steam"></a>
               <a href="mailto:nitindhemiwal01@gmail.com" target="_blank" class="fa fa-google-plus"></a>
               <a href="https://www.linkedin.com/in/dhemiwalnitin" target="_blank" class="fa fa-linkedin"></a>
               <a href="https://github.com/zephyr007" target="_blank" class="fa fa-github"></a>
@@ -447,7 +445,7 @@
         </div>
 
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
-          <div class="info-box">
+          <div class="info-box" style="overflow-x: scroll;">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
             <p>nitindhemiwal01@gmail.com</p>
