--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
         
         <a href="https://twitter.com/Dhemiwalnitin" target="_blank" class="fa fa-twitter"></a>
         <a href="https://steamcommunity.com/id/dhemiwalnitin/" target="_blank" class="fa fa-steam"></a>
+        <a href="https://www.facebook.com/nitindhemiwal/" target="_blank" class="fa fa-facebook"></a>
+        <a href="https://www.instagram.com/nitin_dhemiwal/" target="_blank" class="fa fa-instagram"></a>
         <a href="mailto:nitindhemiwal01@gmail.com" target="_blank" class="fa fa-google-plus"></a>
         <a href="https://www.linkedin.com/in/dhemiwalnitin" target="_blank" class="fa fa-linkedin"></a>
         <a href="https://github.com/zephyr007" target="_blank" class="fa fa-github"></a>
@@ -437,6 +439,8 @@
             <h3>Social Profiles</h3>
             <div class="social-links">
               <a href="https://twitter.com/Dhemiwalnitin" target="_blank" class="fa fa-twitter"></a>
+              <a href="https://www.facebook.com/nitindhemiwal/" target="_blank" class="fa fa-facebook"></a>
+              <a href="https://www.instagram.com/nitin_dhemiwal/" target="_blank" class="fa fa-instagram"></a>
               <a href="mailto:nitindhemiwal01@gmail.com" target="_blank" class="fa fa-google-plus"></a>
               <a href="https://www.linkedin.com/in/dhemiwalnitin" target="_blank" class="fa fa-linkedin"></a>
               <a href="https://github.com/zephyr007" target="_blank" class="fa fa-github"></a>
