--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
         </div>
 
         <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
-          <div class="info-box" style="overflow-x: scroll;">
+          <div class="info-box" style="overflow-x: auto;">
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
@@ -449,7 +449,7 @@
         </div>
 
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
-          <div class="info-box" style="overflow-x: scroll;">
+          <div class="info-box" style="overflow-x: auto;">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
             <p>nitindhemiwal01@gmail.com</p>
