About me changed

--- a/index.html
+++ b/index.html
@@ -456,8 +456,12 @@
             <p>nitindhemiwal01@gmail.com</p>
           </div>
         </div>
-          <div class="col-md-6 mt-4 d-flex align-items-stretch">
-         
+        <div class="col-md-6 mt-4 d-flex align-items-stretch">
+          <div class="info-box" style="overflow-x: auto;">
+            <i class="bx bx-envelope"></i>
+            <h3>Call Me</h3>
+            <p> +91 - 9015902007</p>
+          </div>
         </div>
       </div>
           
