--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#resume">Resume</a></li>
-          <li><a href="#certifications">Projects</a></li>
+          <!-- <li><a href="#certifications">Projects</a></li> -->
          
           <li><a href="#contact">Contact</a></li>
      </ul>
@@ -306,7 +306,7 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
-        <h3>Download pdf version <a href="https://drive.google.com/file/d/1LvXUOyj5LiWHCDtQp9boYGGlM1ewLTt2/view?usp=sharing" target="_blank">here.</a></h3>
+        <h3>Download pdf version <a href="https://drive.google.com/file/d/1X8hP4t7eUSS0-seYi3Xi56RjcoLSoa3j/view?usp=sharing" target="_blank">here.</a></h3>
       </div>
 
       <div class="row">
