--- a/index.html
+++ b/index.html
@@ -339,20 +339,20 @@
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
             <h4>SDE Intern, Paytm Payments Bank</h4>
-            <h5>june -july 2020</h5>
+            <h5>Jan 2021-Present </h5>
             <p><em> Backend Developer</em></p>
             <p>Currently working in UPI Payments Backend-team.</p>
           </div>
           <div class="resume-item">
             <h4>Summer Intern, Here technologies</h4>
-            <h5>june -july 2020</h5>
+            <h5>June-July 2020</h5>
             <p><em> Web Developer</em></p>
             <p>Completed a local service finding tool with help of here maps Api</p>
           </div>
 
           <div class="resume-item">
             <h4>Web Designer, Finish-It Concerige Services </h4>
-            <h5>2017 - 2021</h5>
+            <h5>June-July 2018</h5>
             <p><em> Web Designer</em></p>
             <p>Worked directly with co-founders and designed the offical website for the startup </p>
           </div>
