--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
-        <h3>Download pdf version <a href="https://drive.google.com/file/d/1UTnYbnqJlpG3EN5NI3k7hra6mq6s4mlN/view?usp=sharing" target="_blank">here.</a></h3>
+        <h3>Download pdf version <a href="https://drive.google.com/file/d/1oWefuQRwQW8Qn0YnUmjolNI7IMTnGiMp/view" target="_blank">here.</a></h3>
       </div>
 
       <div class="row">
