--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <ul>
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#resume">Resume</a></li>
+          <li><a href="https://bit.ly/nitinDevR" target="_blank">Resume</a></li>
           <!-- <li><a href="#certifications">Projects</a></li> -->
          
           <li><a href="#contact">Contact</a></li>
@@ -306,7 +306,7 @@
       <div class="section-title">
         <h2>Resume</h2>
         <p>Check My Resume</p>
-        <h3>Download pdf version <a href="https://bit.ly/nitinDev" target="_blank">here.</a></h3>
+        <h3>Download pdf version <a href="https://bit.ly/nitinDevR" target="_blank">here.</a></h3>
       </div>
 
       <div class="row">
