--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <header id="header" class="header-tops">
     <div class="container">
 
-      <h1><a href="http://nitindhemiwal.me" class="mr-auto" ><img src="assets/img/N.png" height="50px" width="50px" alt="" class="img-fluid">Nitin Dhemiwal</a></h1>
+      <h1><a href="https://dhemiwalnitin.me/" class="mr-auto" ><img src="assets/img/N.png" height="50px" width="50px" alt="" class="img-fluid">Nitin Dhemiwal</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <div class="wrapped">
       <h2>Building the Universe. One Pixel at a time.</h2>
@@ -49,7 +49,7 @@
         <ul>
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="https://bit.ly/nitinDevR" target="_blank">Resume</a></li>
+          <li><a href="https://drive.google.com/file/d/1DxCQFscT6iIApwwONfBmLa2mHFLnqBre/view" target="_blank">Resume</a></li>
           <!-- <li><a href="#certifications">Projects</a></li> -->
          
           <li><a href="#contact">Contact</a></li>
